<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.screens.settings.security.PasswordChangeSuccessFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/appPrimary" />

    <ImageView
        android:id="@+id/mClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:id="@+id/mainLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mClose"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_reset_email" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold_600"
            android:gravity="center"
            android:text="@string/resetpass"
            android:textColor="@color/textOnWhite"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_semibold_600"
            android:gravity="center"
            android:text="@string/resetpass_email"
            android:textColor="@color/textOnWhiteAccentGray"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/gotoMailCta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/cta_background"
            android:fontFamily="@font/manrope_semibold_600"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/goto_email"
            android:textColor="@color/textOnSolid"
            android:textSize="@dimen/_11sdp" />

        <RelativeLayout
            android:id="@+id/mResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/mText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/inter_semibold_600"
                android:gravity="center"
                android:text="@string/receive_no_link"
                android:textColor="@color/textOnWhiteAccentGray"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/mText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/mText1"
                android:fontFamily="@font/inter_semibold_600"
                android:gravity="center"
                android:text="@string/resend"
                android:textColor="@color/appPrimary"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>