<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <View
        android:id="@+id/view"
        android:layout_width="55dp"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_1sdp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/mImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold_600"
            android:text="@string/petrom"
            android:textColor="@color/Map_button"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/services"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_medium_500"
            android:maxLines="2"
            android:text="@string/service_centre"
            android:textColor="@color/services"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter_medium_500"
                android:text="@string/open_24_hours"
                android:textStyle="bold"
                android:textColor="@color/list_time"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/mkm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/inter_medium_500"
                android:text="@string/_10km_away"
                android:textColor="@color/unselected"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/mAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/inter_medium_500"
            android:text="@string/romania_hint"
            android:textColor="@color/unselected"
            android:maxLines="2"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/map_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/direction_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingTop="1dp"
                android:src="@drawable/ic_map_direction" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/inter_semibold_600"
                android:gravity="center"
                android:text="@string/direction"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>